<resources>
    <string name="app_name">CoStats</string>
    <string name="label_country">Country</string>
    <string name="label_total_deaths">Total Deaths</string>
    <string name="label_total_cases">Total Cases</string>
    <string name="label_total_recoveries">Total Recoveries</string>
    <string name="label_details">Details</string>
    <string name="label_countries">Countries</string>
    <string name="hint_country">Country:</string>
    <string name="hint_total_deaths">Total Deaths:</string>
    <string name="hint_new_deaths">New Deaths:</string>
    <string name="hint_total_cases">Total Cases:</string>
    <string name="hint_new_cases">New Cases:</string>
    <string name="hint_total_recovered">Total Recovered:</string>
    <string name="hint_new_recovered">New Recovered:</string>
    <string name="btn_ascending">Ascending</string>
    <string name="btn_descending">Descending</string>
    <string name="btn_clear">Clear</string>
    <string name="btn_total_cases">Total\nCases</string>
    <string name="btn_total_deaths">Total\nDeaths</string>
    <string name="btn_total_recovered">Total\nRecovered</string>
    <string name="hint_value">Value</string>
    <string name="btn_done">Done</string>
    <string name="btn_less_than">Less Than</string>
    <string name="btn_greater_than">Greater Than</string>
</resources>