<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/txt_btn_clear"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/activity_default_margin"
        android:padding="@dimen/dimen_8dp"
        android:text="@string/btn_clear"
        android:textSize="@dimen/dimen_14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txt_btn_done"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/activity_default_margin"
        android:padding="@dimen/dimen_8dp"
        android:text="@string/btn_done"
        android:textSize="@dimen/dimen_14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/barrier_filter_sheet_buttons"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:barrierDirection="bottom"
        app:constraint_referenced_ids="txt_btn_clear,txt_btn_done" />

    <TextView
        android:id="@+id/txt_btn_cases"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginVertical="@dimen/dimen_8dp"
        android:layout_marginStart="@dimen/activity_default_margin"
        android:layout_marginEnd="@dimen/dimen_8dp"
        android:background="@drawable/bg_border_selectable"
        android:gravity="center"
        android:padding="@dimen/activity_default_margin"
        android:text="@string/btn_total_cases"
        app:layout_constraintEnd_toStartOf="@id/txt_btn_deaths"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/barrier_filter_sheet_buttons" />

    <TextView
        android:id="@+id/txt_btn_deaths"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/dimen_8dp"
        android:layout_marginVertical="@dimen/dimen_8dp"
        android:layout_marginStart="@dimen/activity_default_margin"
        android:layout_marginEnd="@dimen/dimen_8dp"
        android:background="@drawable/bg_border_selectable"
        android:gravity="center"
        android:padding="@dimen/activity_default_margin"
        android:text="@string/btn_total_deaths"
        android:textAllCaps="false"
        app:layout_constraintEnd_toStartOf="@id/txt_btn_recovered"
        app:layout_constraintStart_toEndOf="@id/txt_btn_cases"
        app:layout_constraintTop_toBottomOf="@id/barrier_filter_sheet_buttons" />

    <TextView
        android:id="@+id/txt_btn_recovered"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginVertical="@dimen/dimen_8dp"
        android:layout_marginStart="@dimen/dimen_8dp"
        android:layout_marginEnd="@dimen/activity_default_margin"
        android:background="@drawable/bg_border_selectable"
        android:gravity="center"
        android:padding="@dimen/activity_default_margin"
        android:text="@string/btn_total_recovered"
        android:textAllCaps="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/txt_btn_deaths"
        app:layout_constraintTop_toBottomOf="@id/barrier_filter_sheet_buttons" />

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/barrier_types"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:barrierDirection="bottom"
        app:constraint_referenced_ids="txt_btn_cases,txt_btn_deaths,txt_btn_recovered" />

    <TextView
        android:id="@+id/text_btn_less_than"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginVertical="@dimen/dimen_8dp"
        android:layout_marginStart="@dimen/activity_default_margin"
        android:layout_marginEnd="@dimen/dimen_8dp"
        android:background="@drawable/bg_border_selectable"
        android:gravity="center"
        android:padding="@dimen/activity_default_margin"
        android:text="@string/btn_less_than"
        app:layout_constraintEnd_toStartOf="@id/text_btn_greater_than"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/barrier_types" />

    <TextView
        android:id="@+id/text_btn_greater_than"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginVertical="@dimen/dimen_8dp"
        android:layout_marginStart="@dimen/dimen_8dp"
        android:layout_marginEnd="@dimen/activity_default_margin"
        android:background="@drawable/bg_border_selectable"
        android:gravity="center"
        android:padding="@dimen/activity_default_margin"
        android:text="@string/btn_greater_than"
        android:textAllCaps="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/text_btn_less_than"
        app:layout_constraintTop_toBottomOf="@id/barrier_types" />

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/barrier_conditions"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:barrierDirection="bottom"
        app:constraint_referenced_ids="text_btn_less_than,text_btn_greater_than" />

    <EditText
        android:id="@+id/edit_value"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/activity_default_margin"
        android:layout_marginVertical="@dimen/dimen_8dp"
        android:hint="@string/hint_value"
        android:inputType="number"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/barrier_conditions" />

</androidx.constraintlayout.widget.ConstraintLayout>