<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tool="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/color_background"
        android:clickable="true"
        android:focusable="true">

        <androidx.cardview.widget.CardView
            android:id="@+id/card_tool_bar"
            android:layout_width="0dp"
            android:layout_height="?attr/actionBarSize"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:id="@+id/img_country"
                    android:layout_width="0dp"
                    android:layout_height="@dimen/dimen_32dp"
                    android:layout_margin="@dimen/activity_default_margin"
                    android:src="@color/colorAccent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintDimensionRatio="H,1:1"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <ImageView
                    android:id="@+id/img_btn_filter"
                    android:layout_width="0dp"
                    android:layout_height="@dimen/dimen_32dp"
                    android:layout_margin="@dimen/activity_default_margin"
                    android:src="@drawable/ic_filter"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintDimensionRatio="H,1:1"
                    app:layout_constraintEnd_toStartOf="@id/img_btn_sort"
                    app:layout_constraintTop_toTopOf="parent" />

                <ImageView
                    android:id="@+id/img_btn_sort"
                    android:layout_width="0dp"
                    android:layout_height="@dimen/dimen_32dp"
                    android:layout_margin="@dimen/activity_default_margin"
                    android:src="@drawable/ic_sort"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintDimensionRatio="H,1:1"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/txt_country"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:padding="@dimen/dimen_8dp"
            android:text="@string/label_country"
            android:textSize="@dimen/dimen_18sp"
            android:textStyle="bold"
            app:layout_constrainedWidth="true"
            app:layout_constraintBottom_toBottomOf="@id/barrier_column_names"
            app:layout_constraintEnd_toStartOf="@id/txt_total_deaths"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/card_tool_bar" />

        <TextView
            android:id="@+id/txt_total_deaths"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:padding="@dimen/dimen_8dp"
            android:text="@string/label_total_deaths"
            android:textSize="@dimen/dimen_18sp"
            android:textStyle="bold"
            app:layout_constrainedWidth="true"
            app:layout_constraintBottom_toBottomOf="@id/barrier_column_names"
            app:layout_constraintEnd_toStartOf="@id/txt_total_cases"
            app:layout_constraintStart_toEndOf="@id/txt_country"
            app:layout_constraintTop_toBottomOf="@id/card_tool_bar" />

        <TextView
            android:id="@+id/txt_total_cases"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:padding="@dimen/dimen_8dp"
            android:text="@string/label_total_cases"
            android:textSize="@dimen/dimen_18sp"
            android:textStyle="bold"
            app:layout_constrainedWidth="true"
            app:layout_constraintBottom_toBottomOf="@id/barrier_column_names"
            app:layout_constraintEnd_toStartOf="@id/txt_total_recoveries"
            app:layout_constraintStart_toEndOf="@id/txt_total_deaths"
            app:layout_constraintTop_toBottomOf="@id/card_tool_bar" />

        <TextView
            android:id="@+id/txt_total_recoveries"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:padding="@dimen/dimen_8dp"
            android:text="@string/label_total_recoveries"
            android:textSize="@dimen/dimen_18sp"
            android:textStyle="bold"
            app:layout_constrainedWidth="true"
            app:layout_constraintBottom_toBottomOf="@id/barrier_column_names"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/txt_total_cases"
            app:layout_constraintTop_toBottomOf="@id/card_tool_bar" />

        <androidx.constraintlayout.widget.Barrier
            android:id="@+id/barrier_column_names"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:barrierDirection="bottom"
            app:constraint_referenced_ids="txt_country,txt_total_deaths,txt_total_cases,txt_total_recoveries" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler_stats"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginHorizontal="@dimen/dimen_8dp"
            android:clipToPadding="false"
            android:paddingVertical="@dimen/dimen_8dp"
            android:splitMotionEvents="false"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/barrier_column_names"
            tool:listitem="@layout/layout_stats_item" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>